--- a/assets/views/layout.ejs
+++ b/assets/views/layout.ejs
@@ -2,6 +2,7 @@
   <meta charset="utf-8">
   <title><%- title %></title>
   <link rel="stylesheet" href="/lib/normalize.css">
+  <link rel="stylesheet" href="/lib/bootstrap/bootstrap.min.css">
   <link rel="stylesheet" href="/main.css">
   <script src="/lib/jquery.min.js"></script>
   <script src="/something.js"></script>
