--- a/assets/views/layout.jade
+++ b/assets/views/layout.jade
@@ -4,6 +4,7 @@ html
     title= title
     meta(charset='utf-8')
     link(rel='stylesheet', href='/lib/normalize.css')
+    link(rel='stylesheet', href='/lib/bootstrap/bootstrap.min.css')
     link(rel='stylesheet', href='/main.css')
     script(src='/lib/jquery.min.js')
     script(src='/something.js')
