delete extra slash

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,7 +6,7 @@ html
     link(rel='stylesheet', href='/gen/bootstrap.css')
     link(rel='stylesheet', href='/gen/main.css')
     script(src='/lib/jquery.min.js')
-    script(src='/lib//bootstrap.min.js')
+    script(src='/lib/bootstrap.min.js')
     script(src='/gen/main.js')
   body
     #container!= body
