--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html><html><head>
   <meta charset="utf-8">
   <title><%- title %></title>
-  <link rel="stylesheet" href="/gen/bootstrap.css">
-  <link rel="stylesheet" href="/gen/main.css">
+  <link rel="stylesheet" href="/bootstrap.css">
+  <link rel="stylesheet" href="/main.css">
   <script src="/lib/jquery.min.js"></script>
   <script src="/lib/bootstrap.min.js"></script>
-  <script src="/gen/main.js"></script>
+  <script src="/main.js"></script>
 </head><body>
   <div id="container"><%- body %></div>
 </body></html>
