--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,10 +3,10 @@ html
   head
     title= title
     meta(charset='utf-8')
-    link(rel='stylesheet', href='/gen/bootstrap.css')
-    link(rel='stylesheet', href='/gen/main.css')
+    link(rel='stylesheet', href='/bootstrap.css')
+    link(rel='stylesheet', href='/main.css')
     script(src='/lib/jquery.min.js')
     script(src='/lib/bootstrap.min.js')
-    script(src='/gen/main.js')
+    script(src='/main.js')
   body
     #container!= body
