--- a/styles/bootstrap-and-overrides.less
+++ b/styles/bootstrap-and-overrides.less
@@ -61,3 +61,5 @@
 
 // Utility classes
 @import "./styles/bootstrap/utilities.less"; // Has to be last to override when necessary
+
+@linkColor: green;
