--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html><head>
   <meta charset="utf-8">
   <title><%- title %></title>
-  <link rel="stylesheet" href="/bootstrap.css">
+  <link rel="stylesheet" href="/bootstrap-and-overrides.css">
   <link rel="stylesheet" href="/main.css">
   <script src="/lib/jquery.min.js"></script>
   <script src="/lib/bootstrap.min.js"></script>
