--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,7 @@ html
   head
     title= title
     meta(charset='utf-8')
-    link(rel='stylesheet', href='/bootstrap.css')
+    link(rel='stylesheet', href='/bootstrap-and-overrides.css')
     link(rel='stylesheet', href='/main.css')
     script(src='/lib/jquery.min.js')
     script(src='/lib/bootstrap.min.js')
